[package]
name = "kind-config"
version = "0.1.0"
authors = ["Jonathan Zrake <jonathan.zrake@gmail.com>"]
edition = "2018"
description = "Config maps with default values, kind, and about message for each key"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
