[package]
name = "kind-config"
version = "0.2.5"
authors = ["Jonathan Zrake <jonathan.zrake@gmail.com>"]
edition = "2018"
description = "Collect kind-checked model parameters from the command line"
license = "MIT"
repository = "https://github.com/clemson-cal/kind-config"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = {version = "0.7.0", optional = true}
